<resources>
    <string name="app_name">Poweramp LRC Plugin</string>
    <string name="main_message">This is a simple app to fix Poweramp\'s lack of local LRC lyrics support. Before we start, some permissions are required to work correctly. \nAfter permissions are granted, a configuration page will appear.\n\nNewly added standalone mode is more stable and reliable, which is supposed to help get rid of “Lyrics not found”, and will replace the current solution in a few versions. Welcome to get a taste.\n\nFeatures differing with different file access ways——\nLegacy files:\nEmbedded lyrics\n————\n(working to eliminate these differences)</string>
    <string name="main_old">Your Android version does not require any permission to be requested.</string>
    <string name="main_configuration">All permissions are ready, click next to make customizations!</string>
    <string name="permission_storage_hint">Storage permission(read only) is required to fetch your .lrc files.</string>
    <string name="permission_storage_granted">Storage permission granted.</string>
    <string name="permission_storage_denied">Storage permission denied.</string>
    <string name="permission_storage_check">Check storage permission</string>
    <string name="permission_floating_hint">Drawing over other apps is required to create a floating lyric window.</string>
    <string name="permission_floating_granted">Drawing permission granted.</string>
    <string name="permission_floating_denied">Drawing permission denied.</string>
    <string name="permission_floating_check">Check display permission</string>
    <string name="done_hint">All ready! Open Poweramp, start playing, click the notification and enjoy!</string>
    <string name="done_extra">Note: \nWhen lyrics delay, try pausing and resuming playing. Delay caused by Poweramp may also be the cause, as Poweramp reports position in seconds, thus when the lyrics change too often or are at the middle of a second there will unavoidably exist delay. If you believe what you meet is a bug, please open a issue attached with procedures to reproduce the bug and delay caused by Poweramp on GitHub.</string>

    <string name="notification_entrance_channel_name">Window toggle</string>
    <string name="notification_message_hide">Click to hide</string>
    <string name="notification_message_show">Click to show</string>
    <string name="notification_path_channel_name">Path setting</string>
    <string name="notification_path_title">Permission needed</string>
    <string name="notification_path_message">Please specify a folder for\u0020</string>
    <string name="notification_placeholder_channel_name">Placeholder</string>
    <string name="notification_placeholder_message">Running in the background (this notification can be disabled).</string>

    <string name="no_lrc_hint">Lyrics not found</string>
    <string name="no_charset_hint">Lyric charset not supported</string>
    <string name="lrc_loading">Loading lyrics</string>

    <string name="preference_ui">UI</string>
    <string name="preference_ui_duration">Animation duration</string>
    <string name="preference_ui_duration_description">Default is 250 ms, current:\u0020</string>
    <string name="preference_ui_height">Window height</string>
    <string name="preference_ui_height_description">Default is 64 dp, current:\u0020</string>
    <string name="preference_ui_textsize">Text size</string>
    <string name="preference_ui_textsize_description">Default is 18 sp, current:\u0020</string>
    <string name="preference_ui_text">Lyrics color</string>
    <string name="preference_experimental">Experimental features</string>
    <string name="preference_experimental_standalone">File access in standalone mode</string>
    <string name="preference_experimental_standalone_description">Look for all your lyric files only in selected folders.</string>
    <string name="preference_experimental_standalone_description_full">This function is still in beta stage.\n\nOnce enabled, you\'ll be asked to choose folders where your lyric files are placed, and this app only looks for the corresponding lyrics in the chosen folders. Also, this may help if you get constant \"Lyrics not found\".\n\nThings won\'t take effect until lyrics reload.</string>
    <string name="preference_experimental_standalone_add">Add a folder</string>
    <string name="preference_experimental_standalone_manage">Manage folders</string>
    <string name="preference_experimental_legacy">File access in legacy mode</string>
    <string name="preference_experimental_legacy_description">(Android 10 only) May be useful if normal version is not working, but please also report when that happens</string>
    <string name="preference_experimental_encoding">Use GB18030 encoding</string>
    <string name="preference_experimental_encoding_description">Possibly fix problem of garbled lyrics downloaded from QQ music</string>
    <string name="preference_experimental_embedded">Use lyrics embedded in songs</string>
    <string name="preference_experimental_embedded_description">May lag or cause instability</string>
    <string name="preference_experimental_embedded_description_full">This function is still in beta stage. Your .lrc files may not get loaded with this enabled and your song containing embedded non-lrc-format lyrics.\n\nCurrently this works only for non-SAF files (whose folder access is not allowed manually, like files stored in internal storage of most devices running Android 9 and below) and some of Android 10 devices with File Access Legacy Mode(Poweramp) or File access in legacy mode(this app) enabled. \n\nThings won\'t take effect until lyrics reload.</string>
    <string name="preference_experimental_charset">Auto detect charset</string>
    <string name="preference_experimental_charset_description">Possibly fix \"Lyrics not found\" or garbled lyrics</string>
    <string name="preference_experimental_report">Report problem</string>
    <string name="preference_experimental_report_description">Generate a detailed log of what might cause problems (not including personal information)</string>
    <string name="preference_after_restart">Things won\'t get changed until window reopens.</string>
    <string name="preference_after_reload">Things won\'t get changed until lyrics reload.</string>
    <string name="preference_default">default</string>
    <string name="error">Something wrong occurred</string>
</resources>
