<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/preference_ui">

        <EditTextPreference
            app:key="duration"
            app:title="@string/preference_ui_duration"
            app:enabled="false" />

        <EditTextPreference
            app:key="height"
            app:title="@string/preference_ui_height"
            app:enabled="false"/>

        <Preference
            app:key="textColor"
            app:title="@string/preference_ui_text"
            app:enabled="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preference_experimental">

        <SwitchPreferenceCompat
            app:key="legacy"
            app:title="@string/preference_experimental_legacy"
            app:summary="@string/preference_experimental_legacy_description"
            app:defaultValue="false"
            app:enabled="false"/>

        <SwitchPreferenceCompat
            app:key="encoding"
            app:title="@string/preference_experimental_encoding"
            app:summary="@string/preference_experimental_encoding_description"
            app:defaultValue="false"/>

        <Preference
            app:key="report"
            app:title="@string/preference_experimental_report"
            app:summary="@string/preference_experimental_report_description"/>

    </PreferenceCategory>

</PreferenceScreen>