<?xml version="1.0" encoding="utf-8"?>
<com.android.setupwizardlib.SetupWizardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/permission_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/permission_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/permission_storage_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_storage_hint" />

            <Button
                android:id="@+id/permission_storage_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_storage_check" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/permission_floating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/permission_floating_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/permission_floating_hint" />

            <Button
                android:id="@+id/permission_floating_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_floating_check" />

        </LinearLayout>

    </LinearLayout>

</com.android.setupwizardlib.SetupWizardLayout>